<resources>
    <string name="app_name">Form Inputs</string>
    <string name="cantBeEmpty">%s can\'t be empty</string>
    <string name="isRequired">%s is required</string>
    <string name="value">value</string>
    <string name="inValidEmail">Invalid email address</string>
    <string name="select">Select</string>
    <string name="notSelected">Not selected</string>
    <string name="inValidPhoneNumber">Invalid phone number</string>
    <string name="star">*</string>
    <string name="charactersOnly">300/300 Characters Only</string>
    <string name="label">Label</string>


    <string name="password_strength_weak">Weak</string>
    <string name="password_strength_medium">Medium</string>
    <string name="password_strength_strong">Strong</string>
    <string name="password_strength_very_strong">Very Strong</string>
    <string name="hintPassword">%s must be at least 8 characters</string>
    <string name="weak">Weak</string>
    <string name="pleaseWait">Please, wait..</string>
    <string name="Submit">Submit</string>
</resources>
