<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/lyView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/layLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/tvLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/label"
                    android:textColor="@color/colorGrey"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvMandatory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_toEndOf="@+id/tvLabel"
                    android:layout_toRightOf="@+id/tvLabel"
                    android:text="@string/star"
                    android:textColor="@color/red"
                    android:textSize="14sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layInputBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layLabel"
                android:background="@drawable/bg_txt_square"
                android:visibility="visible">

                <Spinner
                    android:id="@+id/spSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/array"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/txtInputBox"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_toStartOf="@+id/iconCancel"
                    android:layout_toLeftOf="@+id/iconCancel"
                    android:layout_toEndOf="@+id/spSpinner"
                    android:layout_toRightOf="@+id/spSpinner"
                    android:background="@color/colorTransparent"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/app_name"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textSize="14sp"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/iconCancel"
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:src="@drawable/ic_close_grey"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/txtLengthDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtInputBox"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/roboto_light"
                    android:singleLine="true"
                    android:text="@string/charactersOnly"
                    android:textSize="12sp"
                    android:visibility="gone" />

            </RelativeLayout>

            <!--Input box-->

            <!-- Drop down -->
            <RelativeLayout
                android:id="@+id/layAutoComplete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layLabel"
                android:background="@drawable/bg_txt_square"
                android:padding="2dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/iconDropDown"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_arrow_down2"
                    android:visibility="visible" />

                <com.omarshehe.forminputjava.AutoCompleteView
                    android:id="@+id/autoCompleteView"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_toStartOf="@+id/iconDropDown"
                    android:layout_toLeftOf="@+id/iconDropDown"
                    android:background="#FFFFFF"
                    android:gravity="center_vertical"
                    android:hint="@string/select"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:paddingEnd="0dp"
                    android:paddingRight="0dp"
                    android:singleLine="true"
                    android:textSize="14sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layLabel"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/txtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_white"
                        android:hint="@string/app_name"
                        android:inputType="textPassword"
                        app:passwordToggleEnabled="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/layPassStrength"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/passView"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:indeterminate="false"
                        android:maxHeight="20dip"
                        android:minHeight="20dip"
                        android:progress="0" />

                    <TextView
                        android:id="@+id/tvPassStrength"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/weak" />
                </LinearLayout>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <FrameLayout
                    android:id="@+id/btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btnNoImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_btn_click"
                        android:contentDescription="@string/app_name"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:text="@string/Submit"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite" />
                </FrameLayout>

                <ProgressBar
                    android:id="@+id/btnProgressBar"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/btn"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:indeterminate="true"
                    android:visibility="gone" />

            </RelativeLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/tvError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lyView"
            android:fontFamily="@font/roboto_light"
            android:gravity="end"
            android:paddingLeft="10dp"
            android:paddingTop="3dp"
            android:paddingRight="10dp"
            android:text="@string/app_name"
            android:textColor="@color/red"
            android:textSize="12sp"
            android:visibility="gone" />
    </RelativeLayout>


</layout>